@@ -34,7 +34,10 @@
 ## email (supports validation)
 ## select (drop down box with selectable values)
 ## hidden (hide the control)
-## color ( with color picker and preview of color, needs rewrite rules to allow html files from design folders if in virtualhost mode )
+## color (with color picker and preview of color, needs rewrite rules to allow html files from design folders if in virtualhost mode)
+## htmlsize (int with drop down for size type px or %, where px is stripped out in resulting value)
+## csssize (int with drop down for size type, see CssSizeType[], px / % available if not defined)
+## csssize4 (same as csssize but for top, right, bottom and left, same as combined css value, aka margin: 0 1px 4% 0;)
 ## checkbox
 #Type=select
 ## Optional, lets you disable the html control so users can't change the value
@@ -50,6 +53,12 @@
 #Selection[left]=Left
 #Selection[right]=Right
 #Selection[center]=Center
+## CssSizeType is used for size type on csssize and csssize4
+#CssSizeType[]
+#CssSizeType[px]=px
+#CssSizeType[em]=em
+#CssSizeType[pt]=pt
+#CssSizeType[%]=%
 
 
 # Complete custom attributes example for enabling and forcing users
